feature: statements module (without tests)